# CircuitPython_SensorStubs

./: LICENSE  README.rst  pyproject.toml  requirements.txt  sensorstubs.py
.github/workflows/: release_gh.yml
examples/: sensorstubs_simpletest.py
